# claude-task-master-py

./: .coderabbit.yml  .dockerignore  .gitignore  .test-verification.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  SECURITY.md  coverage.xml  docker-compose.yml  idea.md  pyproject.toml  requirements.txt
.github/workflows/: README.md  ci.yml  codeql.yml  docker-publish.yml  publish-test.yml  publish.yml  release.yml
docs/: api-reference.md  authentication.md  docker.md  installation-testing.md  webhooks.md
examples/: 01-basic-usage.md  02-feature-development.md  03-bug-fixing.md  04-refactoring.md  05-testing.md  06-documentation.md  07-cicd.md  08-advanced-workflows.md  README.md  util.py
examples/docker-compose/: .env.example  .gitignore  README.md  basic-production.yml  development.yml  production-monitoring.yml  production-with-caddy.yml  production-with-nginx.yml
examples/docker-compose/caddy-config/: Caddyfile
examples/docker-compose/monitoring-config/grafana/provisioning/dashboards/: dashboard.yml
examples/docker-compose/monitoring-config/grafana/provisioning/datasources/: prometheus.yml
examples/docker-compose/monitoring-config/prometheus/: alerts.yml  prometheus.yml
examples/docker-compose/nginx-config/: nginx.conf
examples/docker-compose/nginx-config/conf.d/: claudetm.conf
scripts/: setup-hooks.sh  sync_version.py
scripts/hooks/: pre-commit
src/claude_task_master/: __init__.py  cli.py  server.py
src/claude_task_master/api/: __init__.py  models.py  routes.py  routes_config.py  routes_control.py  server.py
src/claude_task_master/auth/: __init__.py  middleware.py  password.py
src/claude_task_master/cli_commands/: __init__.py  config.py  control.py  fix_pr.py  github.py  info.py  workflow.py
src/claude_task_master/core/: __init__.py  agent.py  agent_exceptions.py  agent_message.py  agent_phases.py  agent_query.py  checkpoint.py  circuit_breaker.py  config_loader.py  console.py  context_accumulator.py  control.py  conversation.py  credentials.py  hooks.py  key_listener.py  logger.py  orchestrator.py  parallel.py  planner.py  pr_context.py  progress_tracker.py  prompts.py  prompts_base.py  prompts_planning.py  prompts_verification.py  prompts_working.py  shutdown.py  state.py  state_backup.py  state_exceptions.py  state_file_ops.py  state_pr.py  state_recovery.py  subagents.py  task_group.py  task_runner.py  workflow_stages.py
src/claude_task_master/github/: __init__.py  client.py  client_ci.py  client_pr.py  exceptions.py  pr_cycle.py
src/claude_task_master/mcp/: auth.py  server.py  tools.py
src/claude_task_master/utils/: doctor.py
src/claude_task_master/webhooks/: __init__.py  client.py  config.py  events.py
tests/: conftest.py  test_cli.py  test_mcp_server.py  test_server.py
tests/api/: __init__.py  conftest.py  test_auth.py  test_fixtures.py  test_routes_config.py  test_routes_control.py  test_routes_status.py  test_routes_task.py
tests/auth/: __init__.py  test_middleware.py
tests/cli/: __init__.py  conftest.py  test_clean_command.py  test_cli_help.py  test_config_commands.py  test_logs_command.py  test_pr_command.py  test_resume_errors.py  test_resume_workflow.py  test_start_command.py  test_status_command.py
tests/cli_commands/: test_control.py  test_fix_pr.py  test_github.py  test_info.py
tests/core/: conftest.py  test_agent.py  test_agent_ANALYSIS.md  test_agent_errors.py  test_agent_exceptions.py  test_agent_init.py  test_agent_models.py  test_agent_phases.py  test_agent_query.py  test_agent_tools.py  test_checkpoint.py  test_circuit_breaker.py  test_config.py  test_console.py  test_context_accumulator.py  test_control.py  test_conversation.py  test_credentials.py  test_fixtures.py  test_key_listener.py  test_logger.py  test_orchestrator.py  test_orchestrator_webhooks.py  test_parallel.py  test_planner.py  test_pr_context.py  test_progress_tracker.py  test_prompts.py  test_prompts_planning.py  test_prompts_verification.py  test_prompts_working.py  test_state.py  test_state_backup.py  test_state_context.py  test_state_exceptions.py  test_state_file_ops.py  test_state_pr.py  test_state_pr_context.py  test_state_tasks.py  test_subagents.py  (+3 more)
tests/github/: test_client.py  test_client_ci.py  test_client_pr.py  test_pr_cycle.py
tests/integration/: conftest.py  test_api_cli_integration.py  test_cli_integration.py  test_error_recovery.py  test_full_workflow.py  test_orchestrator_integration.py  test_pause_resume_workflow.py  test_webhook_cli_args.py  test_workflow_e2e_completion.py  test_workflow_state_transitions.py
tests/mcp/: conftest.py  test_auth.py  test_tools_control.py  test_tools_task_management.py
tests/utils/: test_doctor.py
tests/webhooks/: __init__.py  test_client.py  test_config.py  test_events.py
