[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-task-master"
version = "0.1.0"
description = "Autonomous task orchestration system that keeps Claude working until a goal is achieved"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Claude Task Master Team"}
]
keywords = ["claude", "agent", "autonomous", "task", "orchestration", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/developerz-ai/claude-task-master"
Documentation = "https://github.com/developerz-ai/claude-task-master#readme"
Repository = "https://github.com/developerz-ai/claude-task-master"
Issues = "https://github.com/developerz-ai/claude-task-master/issues"
Changelog = "https://github.com/developerz-ai/claude-task-master/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
all = [
    "claude-task-master[mcp,dev]",
]

[project.scripts]
# Main entry point: calls Python wrapper which loads config.json and executes bash wrapper
claudetm = "claude_task_master.wrapper:main"
# Alternative: direct Python CLI (bypasses bash wrapper and config loading)
claudetm-py = "claude_task_master.cli:app"
# MCP server entry point
claudetm-mcp = "claude_task_master.mcp.server:main"

# Setuptools configuration
# Include the bash wrapper script for installation
# This script wraps the Python CLI to load config.json and set env vars
[tool.setuptools]
script-files = ["bin/claudetm"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["claude_task_master*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=claude_task_master",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=50",
    "--timeout=2",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require external services)",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/claude_task_master"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.uv.workspace]
members = [
    "tmp/test-project-1",
]

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
